// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown overlay is function and has custom transitionName 1`] = `
Array [
  <button
    class="ant-dropdown-trigger ant-dropdown-open"
    type="button"
  >
    button
  </button>,
  <div>
    <div
      class="ant-dropdown move-up-appear move-up-appear-prepare move-up"
      style="opacity: 0;"
    >
      <div>
        menu
      </div>
    </div>
  </div>,
]
`;

exports[`Dropdown overlay is string 1`] = `
Array [
  <button
    class="ant-dropdown-trigger ant-dropdown-open"
    type="button"
  >
    button
  </button>,
  <div>
    <div
      class="ant-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0;"
    >
      <span>
        string
      </span>
    </div>
  </div>,
]
`;

exports[`Dropdown rtl render component should be rendered correctly in RTL direction 1`] = `
<span
  class="ant-dropdown-trigger ant-dropdown-rtl"
/>
`;
